--- a/main/mods/amendments.pw.toml
+++ b/main/mods/amendments.pw.toml
@@ -1,13 +1,13 @@
 name = "amendments"
-filename = "amendments-1.20-1.1.5-fabric.jar"
+filename = "amendments-1.20-1.1.7-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6iTJugQR/versions/xvg2LEOW/amendments-1.20-1.1.5-fabric.jar"
+url = "https://cdn.modrinth.com/data/6iTJugQR/versions/CNGhf8Ly/amendments-1.20-1.1.7-fabric.jar"
 hash-format = "sha1"
-hash = "361cf26ea94f605dd91155581ed863ff41456625"
+hash = "55c18ce7edb57dd56813b7c291db4405e259d296"
 
 [update]
 [update.modrinth]
 mod-id = "6iTJugQR"
-version = "xvg2LEOW"
+version = "CNGhf8Ly"
