--- a/main/mods/toms-trading-network.pw.toml
+++ b/main/mods/toms-trading-network.pw.toml
@@ -1,13 +1,13 @@
 name = "Tom's Trading Network"
-filename = "toms_trading_network-fabric-1.20-0.2.3.jar"
+filename = "toms_trading_network-fabric-1.20-0.2.4.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/x5iQ3NM5/versions/puKVjJue/toms_trading_network-fabric-1.20-0.2.3.jar"
+url = "https://cdn.modrinth.com/data/x5iQ3NM5/versions/KCwwK1st/toms_trading_network-fabric-1.20-0.2.4.jar"
 hash-format = "sha1"
-hash = "4bd09b4fb72fb48c83257805771904627dec1422"
+hash = "602dd932e37985bcafa14268f028d1a127c1ee07"
 
 [update]
 [update.modrinth]
 mod-id = "x5iQ3NM5"
-version = "puKVjJue"
+version = "KCwwK1st"
