--- a/main/index.toml
+++ b/main/index.toml
@@ -185,6 +185,10 @@ file = "mods/dawn.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/dcintegration.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/dimensionaldoors.pw.toml"
 metafile = true
 
