--- a/main/mods/collective.pw.toml
+++ b/main/mods/collective.pw.toml
@@ -1,13 +1,13 @@
 name = "Collective"
-filename = "collective-1.20.1-7.37.jar"
+filename = "collective-1.20.1-7.39.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/e0M1UDsY/versions/VzIh9jNk/collective-1.20.1-7.37.jar"
+url = "https://cdn.modrinth.com/data/e0M1UDsY/versions/1zbEORsv/collective-1.20.1-7.39.jar"
 hash-format = "sha1"
-hash = "e3a1747ec8f9e31cfb99d764c90ed214029caf74"
+hash = "05b9a2efc99e9cbf0a753db14be80124946ab32a"
 
 [update]
 [update.modrinth]
 mod-id = "e0M1UDsY"
-version = "VzIh9jNk"
+version = "1zbEORsv"
