--- a/main/mods/wthit.pw.toml
+++ b/main/mods/wthit.pw.toml
@@ -1,13 +1,13 @@
 name = "WTHIT"
-filename = "wthit-quilt-8.7.3.jar"
+filename = "wthit-quilt-8.8.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/XM4qNPbG/wthit-quilt-8.7.3.jar"
+url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/I0DzRv3h/wthit-quilt-8.8.0.jar"
 hash-format = "sha1"
-hash = "3993ca533ac29456c03cb6de772a66355ae5ab0d"
+hash = "4bc0a08b12d394d6a9894d47b9e542153c6c9c5a"
 
 [update]
 [update.modrinth]
 mod-id = "6AQIaxuO"
-version = "XM4qNPbG"
+version = "I0DzRv3h"
