--- a/main/mods/create-air-fabric.pw.toml
+++ b/main/mods/create-air-fabric.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Air Fabric"
-filename = "createairfabric-1.0+1.20.1-15.jar"
+filename = "createairfabric-1.0+1.20.1-18.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/C90qpzXw/versions/kF36awMc/createairfabric-1.0%2B1.20.1-15.jar"
+url = "https://cdn.modrinth.com/data/C90qpzXw/versions/G7gYc139/createairfabric-1.0%2B1.20.1-18.jar"
 hash-format = "sha1"
-hash = "b4ce573a566d5416e3f38fca9220142e659092cc"
+hash = "fef489dc4116c8eeb6d0c15472e314cfc128aa9b"
 
 [update]
 [update.modrinth]
 mod-id = "C90qpzXw"
-version = "kF36awMc"
+version = "G7gYc139"
