--- a/main/mods/create-ore-excavation.pw.toml
+++ b/main/mods/create-ore-excavation.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Ore Excavation"
-filename = "createoreexcavation-fabric-1.20-1.4.3.jar"
+filename = "createoreexcavation-fabric-1.20-1.4.4.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/ResbpANg/versions/nyYmbpDj/createoreexcavation-fabric-1.20-1.4.3.jar"
+url = "https://cdn.modrinth.com/data/ResbpANg/versions/15BFIdMo/createoreexcavation-fabric-1.20-1.4.4.jar"
 hash-format = "sha1"
-hash = "1926e53c51b5d4ba384b563674fb5b59007165d2"
+hash = "b5f719dcffcd60140c9c68b798dd146308ff2794"
 
 [update]
 [update.modrinth]
 mod-id = "ResbpANg"
-version = "nyYmbpDj"
+version = "15BFIdMo"
