--- a/main/mods/createaddition.pw.toml
+++ b/main/mods/createaddition.pw.toml
@@ -1,14 +1,13 @@
 name = "Create Crafts & Additions"
-filename = "createaddition-fabric+1.20.1-1.2.1.jar"
+filename = "createaddition-fabric+1.20.1-1.2.3.jar"
 side = "both"
-pin = true
 
 [download]
-url = "https://cdn.modrinth.com/data/kU1G12Nn/versions/RsoAifnm/createaddition-fabric%2B1.20.1-1.2.1.jar"
+url = "https://cdn.modrinth.com/data/kU1G12Nn/versions/J3uh8pqe/createaddition-fabric%2B1.20.1-1.2.3.jar"
 hash-format = "sha1"
-hash = "b96afe26ff1a4757aebff3921961f95d9e38aa0a"
+hash = "e0109d1aba129d30482aaae060abac0ce1e56bc9"
 
 [update]
 [update.modrinth]
 mod-id = "kU1G12Nn"
-version = "RsoAifnm"
+version = "J3uh8pqe"
