--- a/main/mods/copycats.pw.toml
+++ b/main/mods/copycats.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Copycats+"
-filename = "copycats-1.1.1-mc1.20.1-fabric.jar"
+filename = "Copycats-fabric.1.20.1-1.2.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/UT2M39wf/versions/8020527j/copycats-1.1.1-mc1.20.1-fabric.jar"
+url = "https://cdn.modrinth.com/data/UT2M39wf/versions/jgOQ8nj6/Copycats-fabric.1.20.1-1.2.2.jar"
 hash-format = "sha1"
-hash = "2561f88a17fa0a333e3ff5ea94e89c9b61891dbe"
+hash = "a2698739d863a26839e000be2b20262dd2738b31"
 
 [update]
 [update.modrinth]
 mod-id = "UT2M39wf"
-version = "8020527j"
+version = "jgOQ8nj6"
