--- a/main/mods/create-garnished.pw.toml
+++ b/main/mods/create-garnished.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Garnished"
-filename = "garnished-1.6.3+1.20.1.jar"
+filename = "garnished-1.7+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6e2SlzR4/versions/KbCwX87k/garnished-1.6.3%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/6e2SlzR4/versions/R6VRNdjA/garnished-1.7%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "0f7c38a62bb38ace4c75f38f9661352e2b20e23b"
+hash = "21c543a7474a95835c900a8e8f36c2e87b7da799"
 
 [update]
 [update.modrinth]
 mod-id = "6e2SlzR4"
-version = "KbCwX87k"
+version = "R6VRNdjA"
