--- a/main/index.toml
+++ b/main/index.toml
@@ -99,6 +99,10 @@ file = "mods/cccbridge.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/chat-heads.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/chunky.pw.toml"
 metafile = true
 
