marked opac-bluemap-integration as server side

--- a/main/mods/opac-bluemap-integration.pw.toml
+++ b/main/mods/opac-bluemap-integration.pw.toml
@@ -1,5 +1,6 @@
 name = "opac-bluemap-integration"
 filename = "opac-bluemap-integration-1.0.4.jar"
+side = "server"
 
 [download]
 url = "https://github.com/imaron85/opac-bluemap-integration/releases/download/Release2/opac-bluemap-integration-1.0.4.jar"
