--- a/main/mods/audioplayer.pw.toml
+++ b/main/mods/audioplayer.pw.toml
@@ -1,13 +1,13 @@
 name = "AudioPlayer"
-filename = "audioplayer-fabric-1.20.1-1.8.9.jar"
+filename = "audioplayer-fabric-1.20.1-1.9.0.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/SRlzjEBS/versions/hDi749ai/audioplayer-fabric-1.20.1-1.8.9.jar"
+url = "https://cdn.modrinth.com/data/SRlzjEBS/versions/leSdRVZw/audioplayer-fabric-1.20.1-1.9.0.jar"
 hash-format = "sha1"
-hash = "fb8c40534b05f3cd62a43c179c006021a25fa022"
+hash = "47e5b2135b82f7c648fc90ed92f99d984c53171a"
 
 [update]
 [update.modrinth]
 mod-id = "SRlzjEBS"
-version = "hDi749ai"
+version = "leSdRVZw"
