added inventory tabs

--- a/main/index.toml
+++ b/main/index.toml
@@ -414,6 +414,10 @@ file = "mods/inventory-profiles-next.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/inventory-tabs.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/iris.pw.toml"
 metafile = true
 
