--- a/main/mods/create-garnished.pw.toml
+++ b/main/mods/create-garnished.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Garnished"
-filename = "garnished-1.7.3+1.20.1.jar"
+filename = "garnished-1.7.4+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6e2SlzR4/versions/1p4rWjKX/garnished-1.7.3%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/6e2SlzR4/versions/L0Cmqxdq/garnished-1.7.4%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "4adbfd4058a57c09c8cdb8b28abe8c414bf47ce2"
+hash = "3d0a0842f8714346adad05355fe890372a1298f7"
 
 [update]
 [update.modrinth]
 mod-id = "6e2SlzR4"
-version = "1p4rWjKX"
+version = "L0Cmqxdq"
