--- a/main/mods/create-power-loader-fabric.pw.toml
+++ b/main/mods/create-power-loader-fabric.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Power Loader (Fabric)"
-filename = "create_power_loader-1.4.2-mc1.20.1-fabric.jar"
+filename = "create_power_loader-1.4.3-mc1.20.1-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/E9MuZ1zB/versions/oPSDIESC/create_power_loader-1.4.2-mc1.20.1-fabric.jar"
+url = "https://cdn.modrinth.com/data/E9MuZ1zB/versions/Q5q7SSeu/create_power_loader-1.4.3-mc1.20.1-fabric.jar"
 hash-format = "sha1"
-hash = "25c2f5a19ad3809c31bd472a8bf083fe0c1c6bdd"
+hash = "e2ec7212c885ef893a924f3b20b79b8bc5b2f437"
 
 [update]
 [update.modrinth]
 mod-id = "E9MuZ1zB"
-version = "oPSDIESC"
+version = "Q5q7SSeu"
