--- a/main/mods/simple-voice-chat.pw.toml
+++ b/main/mods/simple-voice-chat.pw.toml
@@ -1,13 +1,13 @@
 name = "Simple Voice Chat"
-filename = "voicechat-quilt-1.20.1-2.5.9.jar"
+filename = "voicechat-quilt-1.20.1-2.5.10.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/9eGKb6K1/versions/wmXwpZ1F/voicechat-quilt-1.20.1-2.5.9.jar"
+url = "https://cdn.modrinth.com/data/9eGKb6K1/versions/F4eMTEoU/voicechat-quilt-1.20.1-2.5.10.jar"
 hash-format = "sha1"
-hash = "0d4f78b90af2101b429eeeea27871226c0add6d4"
+hash = "db5beadd5bf9b1d97ea016bfa94be28715c6c84b"
 
 [update]
 [update.modrinth]
 mod-id = "9eGKb6K1"
-version = "wmXwpZ1F"
+version = "F4eMTEoU"
