--- a/main/mods/supplementaries.pw.toml
+++ b/main/mods/supplementaries.pw.toml
@@ -1,13 +1,13 @@
 name = "Supplementaries"
-filename = "supplementaries-1.20-2.8.4-fabric.jar"
+filename = "supplementaries-1.20-2.8.7-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/fFEIiSDQ/versions/qtARIsSl/supplementaries-1.20-2.8.4-fabric.jar"
+url = "https://cdn.modrinth.com/data/fFEIiSDQ/versions/q0MRm1Nc/supplementaries-1.20-2.8.7-fabric.jar"
 hash-format = "sha1"
-hash = "a800565a14cd60711c66dbf9c14358097ee04266"
+hash = "4a8aff5e7c8c727f4a54e3b56747a26d475e1a89"
 
 [update]
 [update.modrinth]
 mod-id = "fFEIiSDQ"
-version = "qtARIsSl"
+version = "q0MRm1Nc"
