--- a/main/mods/create-garnished.pw.toml
+++ b/main/mods/create-garnished.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Garnished"
-filename = "garnished-1.7.4+1.20.1.jar"
+filename = "garnished-1.7.5+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6e2SlzR4/versions/L0Cmqxdq/garnished-1.7.4%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/6e2SlzR4/versions/hpGG98o4/garnished-1.7.5%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "3d0a0842f8714346adad05355fe890372a1298f7"
+hash = "546d69678c7a5688fa2d09e7b02203fcdbe83915"
 
 [update]
 [update.modrinth]
 mod-id = "6e2SlzR4"
-version = "L0Cmqxdq"
+version = "hpGG98o4"
