--- a/main/mods/supplementaries.pw.toml
+++ b/main/mods/supplementaries.pw.toml
@@ -1,13 +1,13 @@
 name = "Supplementaries"
-filename = "supplementaries-1.20-2.8.7-fabric.jar"
+filename = "supplementaries-1.20-2.8.8-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/fFEIiSDQ/versions/q0MRm1Nc/supplementaries-1.20-2.8.7-fabric.jar"
+url = "https://cdn.modrinth.com/data/fFEIiSDQ/versions/k4WDfS6x/supplementaries-1.20-2.8.8-fabric.jar"
 hash-format = "sha1"
-hash = "4a8aff5e7c8c727f4a54e3b56747a26d475e1a89"
+hash = "255a1bb5d9c10f53562efaeda2fab4525bf8faf0"
 
 [update]
 [update.modrinth]
 mod-id = "fFEIiSDQ"
-version = "q0MRm1Nc"
+version = "k4WDfS6x"
