--- a/main/mods/copycats.pw.toml
+++ b/main/mods/copycats.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Copycats+"
-filename = "Copycats-fabric.1.20.1-1.2.2.jar"
+filename = "Copycats-fabric.1.20.1-1.2.5.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/UT2M39wf/versions/jgOQ8nj6/Copycats-fabric.1.20.1-1.2.2.jar"
+url = "https://cdn.modrinth.com/data/UT2M39wf/versions/3aFxGW18/Copycats-fabric.1.20.1-1.2.5.jar"
 hash-format = "sha1"
-hash = "a2698739d863a26839e000be2b20262dd2738b31"
+hash = "ecfc99ffcef7033f81ee516f0048c7d4cb0fea0a"
 
 [update]
 [update.modrinth]
 mod-id = "UT2M39wf"
-version = "jgOQ8nj6"
+version = "3aFxGW18"
