--- a/main/mods/create-diesel-generators-fabric.pw.toml
+++ b/main/mods/create-diesel-generators-fabric.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Diesel Generators [Fabric]"
-filename = "creatediselgenerators-2.1.3.jar"
+filename = "creatediselgenerators-1.2.1h.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/reiRz8zO/versions/j8lQm5t2/creatediselgenerators-2.1.3.jar"
+url = "https://cdn.modrinth.com/data/reiRz8zO/versions/QCeFxGVh/creatediselgenerators-1.2.1h.jar"
 hash-format = "sha1"
-hash = "b61f8cdf755174ab632d97db18f86bbea0e283fb"
+hash = "870af066b144234e4f6e4c0aeb76fa494a6b736e"
 
 [update]
 [update.modrinth]
 mod-id = "reiRz8zO"
-version = "j8lQm5t2"
+version = "QCeFxGVh"
