--- a/main/mods/create-goggles.pw.toml
+++ b/main/mods/create-goggles.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Goggles"
-filename = "creategoggles-1.20.1-0.5.5.f-[FABRIC].jar"
+filename = "creategoggles-1.20.1-0.5.5.g-[FABRIC].jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/L1RT5SJc/versions/BlsgVvAl/creategoggles-1.20.1-0.5.5.f-%5BFABRIC%5D.jar"
+url = "https://cdn.modrinth.com/data/L1RT5SJc/versions/ruyz085C/creategoggles-1.20.1-0.5.5.g-%5BFABRIC%5D.jar"
 hash-format = "sha1"
-hash = "14e52501d25e9395e680dff5f83432bb8373035d"
+hash = "e3161f9f4c6285e22677e273cd3d2393a2dde115"
 
 [update]
 [update.modrinth]
 mod-id = "L1RT5SJc"
-version = "BlsgVvAl"
+version = "ruyz085C"
