updated waygl to fix crash when using a custom curser theme on plasma

--- a/main/index.toml
+++ b/main/index.toml
@@ -546,6 +546,10 @@ file = "mods/mouse-tweaks.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/neruina.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/no-chat-reports.pw.toml"
 metafile = true
 
