--- a/main/mods/simple-voice-chat.pw.toml
+++ b/main/mods/simple-voice-chat.pw.toml
@@ -1,13 +1,13 @@
 name = "Simple Voice Chat"
-filename = "voicechat-quilt-1.20.1-2.5.10.jar"
+filename = "voicechat-quilt-1.20.1-2.5.11.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/9eGKb6K1/versions/F4eMTEoU/voicechat-quilt-1.20.1-2.5.10.jar"
+url = "https://cdn.modrinth.com/data/9eGKb6K1/versions/qiszaidz/voicechat-quilt-1.20.1-2.5.11.jar"
 hash-format = "sha1"
-hash = "db5beadd5bf9b1d97ea016bfa94be28715c6c84b"
+hash = "9231dba048eba0332081f97468d801705a8a4b24"
 
 [update]
 [update.modrinth]
 mod-id = "9eGKb6K1"
-version = "F4eMTEoU"
+version = "qiszaidz"
