--- a/main/mods/copycats.pw.toml
+++ b/main/mods/copycats.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Copycats+"
-filename = "Copycats-fabric.1.20.1-1.2.5.jar"
+filename = "Copycats-fabric.1.20.1-1.2.6.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/UT2M39wf/versions/3aFxGW18/Copycats-fabric.1.20.1-1.2.5.jar"
+url = "https://cdn.modrinth.com/data/UT2M39wf/versions/jjhScGWs/Copycats-fabric.1.20.1-1.2.6.jar"
 hash-format = "sha1"
-hash = "ecfc99ffcef7033f81ee516f0048c7d4cb0fea0a"
+hash = "33f4e1ca0d51fd98df7fbb1a51b0b214c212de16"
 
 [update]
 [update.modrinth]
 mod-id = "UT2M39wf"
-version = "3aFxGW18"
+version = "jjhScGWs"
