--- a/main/mods/amendments.pw.toml
+++ b/main/mods/amendments.pw.toml
@@ -1,13 +1,13 @@
 name = "amendments"
-filename = "amendments-1.20-1.1.12-fabric.jar"
+filename = "amendments-1.20-1.1.13-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6iTJugQR/versions/AaUYvmDY/amendments-1.20-1.1.12-fabric.jar"
+url = "https://cdn.modrinth.com/data/6iTJugQR/versions/fKd07fxp/amendments-1.20-1.1.13-fabric.jar"
 hash-format = "sha1"
-hash = "61a9e98232e00626c11b7f621cf4e236ac312703"
+hash = "625650a62a1a4cad73ffb6bc143b9085e52f3f71"
 
 [update]
 [update.modrinth]
 mod-id = "6iTJugQR"
-version = "AaUYvmDY"
+version = "fKd07fxp"
