--- a/main/mods/amendments.pw.toml
+++ b/main/mods/amendments.pw.toml
@@ -1,13 +1,13 @@
 name = "amendments"
-filename = "amendments-1.20-1.1.13-fabric.jar"
+filename = "amendments-1.20-1.1.14-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6iTJugQR/versions/fKd07fxp/amendments-1.20-1.1.13-fabric.jar"
+url = "https://cdn.modrinth.com/data/6iTJugQR/versions/7WBMPKVL/amendments-1.20-1.1.14-fabric.jar"
 hash-format = "sha1"
-hash = "625650a62a1a4cad73ffb6bc143b9085e52f3f71"
+hash = "45a217bb79a76c42c065377ecf382bf5779959ba"
 
 [update]
 [update.modrinth]
 mod-id = "6iTJugQR"
-version = "fKd07fxp"
+version = "7WBMPKVL"
