--- a/main/mods/opac-fabric-create-support.pw.toml
+++ b/main/mods/opac-fabric-create-support.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Support for Open Parties and Claims"
-filename = "opac-fabric-create-support-1.3.0.jar"
+filename = "opac-fabric-create-support-1.5.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/T4Cv5iZq/versions/UmKySKmr/opac-fabric-create-support-1.3.0.jar"
+url = "https://cdn.modrinth.com/data/T4Cv5iZq/versions/BFyubP9L/opac-fabric-create-support-1.5.0.jar"
 hash-format = "sha1"
-hash = "52fefcbecc906e83d05e6a6788e689bab01c3da0"
+hash = "43b39760170f9204b9b8f95cf96bd87c8999427f"
 
 [update]
 [update.modrinth]
 mod-id = "T4Cv5iZq"
-version = "UmKySKmr"
+version = "BFyubP9L"
