--- a/main/mods/expanded-storage.pw.toml
+++ b/main/mods/expanded-storage.pw.toml
@@ -1,13 +1,13 @@
 name = "Expanded Storage"
-filename = "expandedstorage-10.3.0-beta.1+1.20.1-quilt.jar"
+filename = "expandedstorage-10.3.0-beta.2+1.20.1-quilt.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/jCCPlP3c/versions/rWXl6QiX/expandedstorage-10.3.0-beta.1%2B1.20.1-quilt.jar"
+url = "https://cdn.modrinth.com/data/jCCPlP3c/versions/9FEWPfT3/expandedstorage-10.3.0-beta.2%2B1.20.1-quilt.jar"
 hash-format = "sha1"
-hash = "aa10dec928389a9716393e0403eae4c77fed1104"
+hash = "95998c24099007b55c5ea79ce7e06996e172fded"
 
 [update]
 [update.modrinth]
 mod-id = "jCCPlP3c"
-version = "rWXl6QiX"
+version = "9FEWPfT3"
