--- a/main/mods/travelersbackpack.pw.toml
+++ b/main/mods/travelersbackpack.pw.toml
@@ -1,13 +1,13 @@
 name = "Traveler's Backpack"
-filename = "travelersbackpack-fabric-1.20.1-9.1.10.jar"
+filename = "travelersbackpack-fabric-1.20.1-9.1.11.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/rlloIFEV/versions/QHBTpTg1/travelersbackpack-fabric-1.20.1-9.1.10.jar"
+url = "https://cdn.modrinth.com/data/rlloIFEV/versions/OZYAzeTR/travelersbackpack-fabric-1.20.1-9.1.11.jar"
 hash-format = "sha1"
-hash = "d037c85b987d4b62a93c055cda7105228603232d"
+hash = "cc360d6cc181b30bb3704e41292d44f874908c67"
 
 [update]
 [update.modrinth]
 mod-id = "rlloIFEV"
-version = "QHBTpTg1"
+version = "OZYAzeTR"
