--- a/main/mods/farmers-delight-refabricated.pw.toml
+++ b/main/mods/farmers-delight-refabricated.pw.toml
@@ -1,13 +1,13 @@
 name = "Farmer's Delight Refabricated"
-filename = "FarmersDelight-1.20.1-2.0.13+refabricated.jar"
+filename = "FarmersDelight-1.20.1-2.0.16+refabricated.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/7vxePowz/versions/X6fzggyI/FarmersDelight-1.20.1-2.0.13%2Brefabricated.jar"
+url = "https://cdn.modrinth.com/data/7vxePowz/versions/6MKCnUff/FarmersDelight-1.20.1-2.0.16%2Brefabricated.jar"
 hash-format = "sha1"
-hash = "2da9827ae616f4699bc2a2c112c5cab6da36f6b5"
+hash = "49afe15af23795e44e45836d7d51622aa898ed72"
 
 [update]
 [update.modrinth]
 mod-id = "7vxePowz"
-version = "X6fzggyI"
+version = "6MKCnUff"
