--- a/main/mods/moonlight.pw.toml
+++ b/main/mods/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.11.10-fabric.jar"
+filename = "moonlight-1.20-2.11.11-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/p6nioh9J/moonlight-1.20-2.11.10-fabric.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/DoxaOeBf/moonlight-1.20-2.11.11-fabric.jar"
 hash-format = "sha1"
-hash = "1bb2d86580fef9aec6a4472dafb69de912aed1c6"
+hash = "5c9a2457f951feb9c088403ba22a0415b8870370"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "p6nioh9J"
+version = "DoxaOeBf"
