--- a/main/mods/opac-fabric-create-support.pw.toml
+++ b/main/mods/opac-fabric-create-support.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Support for Open Parties and Claims"
-filename = "opac-fabric-create-support-1.5.0.jar"
+filename = "opac-fabric-create-support-mc1.20-1.6.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/T4Cv5iZq/versions/BFyubP9L/opac-fabric-create-support-1.5.0.jar"
+url = "https://cdn.modrinth.com/data/T4Cv5iZq/versions/Cf65NVxT/opac-fabric-create-support-mc1.20-1.6.0.jar"
 hash-format = "sha1"
-hash = "43b39760170f9204b9b8f95cf96bd87c8999427f"
+hash = "2d56dd406d70f0a9e9c2a87ca73632cbfa9bccc9"
 
 [update]
 [update.modrinth]
 mod-id = "T4Cv5iZq"
-version = "BFyubP9L"
+version = "Cf65NVxT"
