--- a/main/mods/expanded-storage.pw.toml
+++ b/main/mods/expanded-storage.pw.toml
@@ -1,13 +1,13 @@
 name = "Expanded Storage"
-filename = "expandedstorage-10.3.0-beta.2+1.20.1-quilt.jar"
+filename = "expandedstorage-10.3.0-beta.3+1.20.1-quilt.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/jCCPlP3c/versions/9FEWPfT3/expandedstorage-10.3.0-beta.2%2B1.20.1-quilt.jar"
+url = "https://cdn.modrinth.com/data/jCCPlP3c/versions/2VCkiKwY/expandedstorage-10.3.0-beta.3%2B1.20.1-quilt.jar"
 hash-format = "sha1"
-hash = "95998c24099007b55c5ea79ce7e06996e172fded"
+hash = "ba4a0be47105bbcd37814d4f9278ae2824a0f83d"
 
 [update]
 [update.modrinth]
 mod-id = "jCCPlP3c"
-version = "9FEWPfT3"
+version = "2VCkiKwY"
