--- a/main/index.toml
+++ b/main/index.toml
@@ -638,6 +638,10 @@ file = "mods/server-country-flags.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/servercore.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/shulkerboxtooltip.pw.toml"
 metafile = true
 
