--- a/main/mods/audioplayer.pw.toml
+++ b/main/mods/audioplayer.pw.toml
@@ -1,13 +1,13 @@
 name = "AudioPlayer"
-filename = "audioplayer-fabric-1.20.1-1.9.0.jar"
+filename = "audioplayer-fabric-1.20.1-1.9.1.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/SRlzjEBS/versions/leSdRVZw/audioplayer-fabric-1.20.1-1.9.0.jar"
+url = "https://cdn.modrinth.com/data/SRlzjEBS/versions/mN7QWOpr/audioplayer-fabric-1.20.1-1.9.1.jar"
 hash-format = "sha1"
-hash = "47e5b2135b82f7c648fc90ed92f99d984c53171a"
+hash = "e00775c859dcbb7d1fc494e376d6daf10cc497dc"
 
 [update]
 [update.modrinth]
 mod-id = "SRlzjEBS"
-version = "leSdRVZw"
+version = "mN7QWOpr"
