--- a/main/mods/better-archeology.pw.toml
+++ b/main/mods/better-archeology.pw.toml
@@ -1,13 +1,13 @@
 name = "Better Archeology"
-filename = "betterarcheology-1.1.6-1.20.1.jar"
+filename = "betterarcheology-1.1.8-1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/zCh7omyG/versions/y3iEgC9J/betterarcheology-1.1.6-1.20.1.jar"
+url = "https://cdn.modrinth.com/data/zCh7omyG/versions/Xhpwoecs/betterarcheology-1.1.8-1.20.1.jar"
 hash-format = "sha1"
-hash = "157e29d22d67db03df105b8efca1c3bb78cb360f"
+hash = "bd794097c0e922cc7b40f283cfb80934f1cf09cc"
 
 [update]
 [update.modrinth]
 mod-id = "zCh7omyG"
-version = "y3iEgC9J"
+version = "Xhpwoecs"
