--- a/main/mods/expanded-storage.pw.toml
+++ b/main/mods/expanded-storage.pw.toml
@@ -1,13 +1,13 @@
 name = "Expanded Storage"
-filename = "expandedstorage-10.3.0-beta.4+1.20.1-quilt.jar"
+filename = "expandedstorage-10.3.0-beta.5+1.20.1-quilt.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/jCCPlP3c/versions/uzK46ZBw/expandedstorage-10.3.0-beta.4%2B1.20.1-quilt.jar"
+url = "https://cdn.modrinth.com/data/jCCPlP3c/versions/WFNUj3D8/expandedstorage-10.3.0-beta.5%2B1.20.1-quilt.jar"
 hash-format = "sha1"
-hash = "fa8cdaa281c75f4638a750dbd276f8f0032d3a4a"
+hash = "f52e7886b855e9391ba0e56d00e400155a0829bc"
 
 [update]
 [update.modrinth]
 mod-id = "jCCPlP3c"
-version = "uzK46ZBw"
+version = "WFNUj3D8"
