--- a/main/mods/amendments.pw.toml
+++ b/main/mods/amendments.pw.toml
@@ -1,13 +1,13 @@
 name = "amendments"
-filename = "amendments-1.20-1.1.18-fabric.jar"
+filename = "amendments-1.20-1.1.22-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6iTJugQR/versions/WOyMgawh/amendments-1.20-1.1.18-fabric.jar"
+url = "https://cdn.modrinth.com/data/6iTJugQR/versions/TV5mTKjg/amendments-1.20-1.1.22-fabric.jar"
 hash-format = "sha1"
-hash = "753157063c6547c79233ca331175ed258de3e782"
+hash = "9d907044c0ba87e85d446ae6dd5bc4fc7a872f0a"
 
 [update]
 [update.modrinth]
 mod-id = "6iTJugQR"
-version = "WOyMgawh"
+version = "TV5mTKjg"
