--- a/main/index.toml
+++ b/main/index.toml
@@ -100,6 +100,12 @@ file = "config/yosbr/config/openpartiesandclaims-server.toml"
 file = "config/yosbr/config/quilt_loading_screen.json"
 
 [[files]]
+file = "config/yosbr/config/servercore/config.yml"
+
+[[files]]
+file = "config/yosbr/config/servercore/optimizations.yml"
+
+[[files]]
 file = "config/yosbr/config/styled-nicknames.json"
 
 [[files]]
@@ -166,6 +172,10 @@ metafile = true
 
 [[files]]
 file = "mods/bluemap.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/bobby.pw.toml"
 metafile = true
 
 [[files]]
