--- a/main/mods/collective.pw.toml
+++ b/main/mods/collective.pw.toml
@@ -1,13 +1,13 @@
 name = "Collective"
-filename = "collective-1.20.1-7.43.jar"
+filename = "collective-1.20.1-7.49.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/e0M1UDsY/versions/kvzKHLkx/collective-1.20.1-7.43.jar"
+url = "https://cdn.modrinth.com/data/e0M1UDsY/versions/hwGW33qv/collective-1.20.1-7.49.jar"
 hash-format = "sha1"
-hash = "eb868daa989ae9453f45bdcc567cdf67e033f15b"
+hash = "e3d3efd0cfb62a69d0095c46f73dc14fe324ca07"
 
 [update]
 [update.modrinth]
 mod-id = "e0M1UDsY"
-version = "kvzKHLkx"
+version = "hwGW33qv"
