--- a/main/mods/wthit.pw.toml
+++ b/main/mods/wthit.pw.toml
@@ -1,13 +1,13 @@
 name = "WTHIT"
-filename = "wthit-quilt-8.9.0.jar"
+filename = "wthit-quilt-8.10.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/YHjKYhxW/wthit-quilt-8.9.0.jar"
+url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/eOLHvosk/wthit-quilt-8.10.0.jar"
 hash-format = "sha1"
-hash = "8275212bca4943b781f0dc371dddf285c25c3d1c"
+hash = "be4cb7de8ce3a0fcce3490f824faedda78b52769"
 
 [update]
 [update.modrinth]
 mod-id = "6AQIaxuO"
-version = "YHjKYhxW"
+version = "eOLHvosk"
