--- a/main/mods/yacl.pw.toml
+++ b/main/mods/yacl.pw.toml
@@ -1,13 +1,13 @@
 name = "YetAnotherConfigLib"
-filename = "yet-another-config-lib-fabric-3.2.2+1.20.jar"
+filename = "YetAnotherConfigLib-3.4.0+1.20.1-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/1eAoo2KR/versions/DretS191/yet-another-config-lib-fabric-3.2.2%2B1.20.jar"
+url = "https://cdn.modrinth.com/data/1eAoo2KR/versions/MJUxq3kq/YetAnotherConfigLib-3.4.0%2B1.20.1-fabric.jar"
 hash-format = "sha1"
-hash = "ad0b96eddc7961e799b154251305a4ffd1cdad9a"
+hash = "7be0029067427b2e21e86af2bf8d286a98073789"
 
 [update]
 [update.modrinth]
 mod-id = "1eAoo2KR"
-version = "DretS191"
+version = "MJUxq3kq"
