--- a/main/mods/collective.pw.toml
+++ b/main/mods/collective.pw.toml
@@ -1,13 +1,13 @@
 name = "Collective"
-filename = "collective-1.20.1-7.49.jar"
+filename = "collective-1.20.1-7.50.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/e0M1UDsY/versions/hwGW33qv/collective-1.20.1-7.49.jar"
+url = "https://cdn.modrinth.com/data/e0M1UDsY/versions/nuJkNPys/collective-1.20.1-7.50.jar"
 hash-format = "sha1"
-hash = "e3d3efd0cfb62a69d0095c46f73dc14fe324ca07"
+hash = "3ababaa1d8f3e757708e98c5bcb57adb7fa70b55"
 
 [update]
 [update.modrinth]
 mod-id = "e0M1UDsY"
-version = "hwGW33qv"
+version = "nuJkNPys"
