--- a/main/mods/unicopia.pw.toml
+++ b/main/mods/unicopia.pw.toml
@@ -1,13 +1,13 @@
 name = "Unicopia"
-filename = "Unicopia-1.3.4+1.20.1.jar"
+filename = "Unicopia-1.3.6+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/9K7RJlvM/versions/l9r8jlfC/Unicopia-1.3.4%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/9K7RJlvM/versions/RhlsDK3W/Unicopia-1.3.6%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "82a49e7364e0d2891b58445eb3417b248c245a40"
+hash = "bb6d59d0fbd0ba42846d5891802a52fe4d6cf777"
 
 [update]
 [update.modrinth]
 mod-id = "9K7RJlvM"
-version = "l9r8jlfC"
+version = "RhlsDK3W"
