--- a/main/mods/noisium.pw.toml
+++ b/main/mods/noisium.pw.toml
@@ -1,13 +1,13 @@
 name = "Noisium"
-filename = "noisium-fabric-2.0.2+mc1.20-1.20.1.jar"
+filename = "noisium-fabric-2.0.3+mc1.20-1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/KuNKN7d2/versions/QW2gKBHw/noisium-fabric-2.0.2%2Bmc1.20-1.20.1.jar"
+url = "https://cdn.modrinth.com/data/KuNKN7d2/versions/uTdy9g9c/noisium-fabric-2.0.3%2Bmc1.20-1.20.1.jar"
 hash-format = "sha1"
-hash = "a9dd2acd9c6400d3353772d7e134671e5611406e"
+hash = "6841863d47b3152d540e523eeebf670287c9cbcf"
 
 [update]
 [update.modrinth]
 mod-id = "KuNKN7d2"
-version = "QW2gKBHw"
+version = "uTdy9g9c"
