--- a/main/mods/audioplayer.pw.toml
+++ b/main/mods/audioplayer.pw.toml
@@ -1,13 +1,13 @@
 name = "AudioPlayer"
-filename = "audioplayer-fabric-1.20.1-1.9.1.jar"
+filename = "audioplayer-fabric-1.20.1-1.10.0.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/SRlzjEBS/versions/mN7QWOpr/audioplayer-fabric-1.20.1-1.9.1.jar"
+url = "https://cdn.modrinth.com/data/SRlzjEBS/versions/KqAoQhKA/audioplayer-fabric-1.20.1-1.10.0.jar"
 hash-format = "sha1"
-hash = "e00775c859dcbb7d1fc494e376d6daf10cc497dc"
+hash = "9844b4f50fbb7a8a4f3c653fa5e8146c92d867c9"
 
 [update]
 [update.modrinth]
 mod-id = "SRlzjEBS"
-version = "mN7QWOpr"
+version = "KqAoQhKA"
