--- a/main/mods/blockus.pw.toml
+++ b/main/mods/blockus.pw.toml
@@ -1,13 +1,13 @@
 name = "Blockus"
-filename = "blockus-2.7.12+1.20.1.jar"
+filename = "blockus-2.7.13+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/zFiY2Go0/versions/QryNVqtA/blockus-2.7.12%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/zFiY2Go0/versions/pdKkC1Qv/blockus-2.7.13%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "54654a13ad7307f4aafa8433b79d513983cd7807"
+hash = "4277435e33e425a2e6fb26a11a494edeb4a2262b"
 
 [update]
 [update.modrinth]
 mod-id = "zFiY2Go0"
-version = "QryNVqtA"
+version = "pdKkC1Qv"
