--- a/main/mods/language-reload.pw.toml
+++ b/main/mods/language-reload.pw.toml
@@ -1,13 +1,13 @@
 name = "Language Reload"
-filename = "language-reload-1.5.10+1.20.1.jar"
+filename = "language-reload-1.5.11+1.20.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/uLbm7CG6/versions/EbPl4WIQ/language-reload-1.5.10%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/uLbm7CG6/versions/DpodeUOd/language-reload-1.5.11%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "a9c19d4a7d45f410784be3d385c2ea0b521e2814"
+hash = "d30a32b48e8669775752f780802a99be998b21e3"
 
 [update]
 [update.modrinth]
 mod-id = "uLbm7CG6"
-version = "EbPl4WIQ"
+version = "DpodeUOd"
