--- a/main/mods/language-reload.pw.toml
+++ b/main/mods/language-reload.pw.toml
@@ -1,13 +1,13 @@
 name = "Language Reload"
-filename = "language-reload-1.5.11+1.20.1.jar"
+filename = "language-reload-1.6.1+1.20.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/uLbm7CG6/versions/DpodeUOd/language-reload-1.5.11%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/uLbm7CG6/versions/kO9nUBoX/language-reload-1.6.1%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "d30a32b48e8669775752f780802a99be998b21e3"
+hash = "02fdfa8eab9fb261c0681d86d1d91b3a2fe16cb6"
 
 [update]
 [update.modrinth]
 mod-id = "uLbm7CG6"
-version = "DpodeUOd"
+version = "kO9nUBoX"
