--- a/main/mods/amendments.pw.toml
+++ b/main/mods/amendments.pw.toml
@@ -1,13 +1,13 @@
 name = "amendments"
-filename = "amendments-1.20-1.1.29-fabric.jar"
+filename = "amendments-1.20-1.1.30-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6iTJugQR/versions/E6f0dSTM/amendments-1.20-1.1.29-fabric.jar"
+url = "https://cdn.modrinth.com/data/6iTJugQR/versions/fLllB3pk/amendments-1.20-1.1.30-fabric.jar"
 hash-format = "sha1"
-hash = "cdc3e8580c559076124452f7f75ada516733c4d3"
+hash = "335c3ed92945c74a431cd8501399f30fbd379a3b"
 
 [update]
 [update.modrinth]
 mod-id = "6iTJugQR"
-version = "E6f0dSTM"
+version = "fLllB3pk"
