--- a/main/mods/neruina.pw.toml
+++ b/main/mods/neruina.pw.toml
@@ -1,13 +1,13 @@
 name = "Neruina - Ticking Entity Fixer"
-filename = "neruina-fabric-2.0.0-beta.5+1.20.1.jar"
+filename = "neruina-fabric-2.0.0-beta.7+1.20.1.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/1s5x833P/versions/PUXRPbIv/neruina-fabric-2.0.0-beta.5%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/1s5x833P/versions/5oomV8Xe/neruina-fabric-2.0.0-beta.7%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "9afd84ef59e4151e478046561d7566b2711f6362"
+hash = "7e02b5dced15ad7941289ce6cda83505de075d12"
 
 [update]
 [update.modrinth]
 mod-id = "1s5x833P"
-version = "PUXRPbIv"
+version = "5oomV8Xe"
