--- a/main/mods/neruina.pw.toml
+++ b/main/mods/neruina.pw.toml
@@ -1,13 +1,13 @@
 name = "Neruina - Ticking Entity Fixer"
-filename = "neruina-fabric-2.0.0-beta.7+1.20.1.jar"
+filename = "neruina-fabric-2.0.0-beta.10+1.20.1.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/1s5x833P/versions/5oomV8Xe/neruina-fabric-2.0.0-beta.7%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/1s5x833P/versions/ltv3yt61/neruina-fabric-2.0.0-beta.10%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "7e02b5dced15ad7941289ce6cda83505de075d12"
+hash = "894030ab9262549936775f26f4bf4ae04f2bc205"
 
 [update]
 [update.modrinth]
 mod-id = "1s5x833P"
-version = "5oomV8Xe"
+version = "ltv3yt61"
