--- a/main/mods/polymorph.pw.toml
+++ b/main/mods/polymorph.pw.toml
@@ -1,13 +1,13 @@
 name = "Polymorph"
-filename = "polymorph-quilt-0.49.3+1.20.1.jar"
+filename = "polymorph-quilt-0.49.5+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/tagwiZkJ/versions/qA4syOxx/polymorph-quilt-0.49.3%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/tagwiZkJ/versions/ByjYK8ay/polymorph-quilt-0.49.5%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "06cae28b9f04fb5d091539a36b663ac796a2d3bc"
+hash = "e5baf74a6dca6546720d25fe82a018e1948e5524"
 
 [update]
 [update.modrinth]
 mod-id = "tagwiZkJ"
-version = "qA4syOxx"
+version = "ByjYK8ay"
