--- a/main/mods/wthit.pw.toml
+++ b/main/mods/wthit.pw.toml
@@ -1,13 +1,13 @@
 name = "WTHIT"
-filename = "wthit-quilt-8.10.0.jar"
+filename = "wthit-quilt-8.11.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/eOLHvosk/wthit-quilt-8.10.0.jar"
+url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/GmHEJD6D/wthit-quilt-8.11.0.jar"
 hash-format = "sha1"
-hash = "be4cb7de8ce3a0fcce3490f824faedda78b52769"
+hash = "0bcfa45fbbb998e15d5605a82c8567e57f234519"
 
 [update]
 [update.modrinth]
 mod-id = "6AQIaxuO"
-version = "eOLHvosk"
+version = "GmHEJD6D"
