--- a/main/mods/create-garnished.pw.toml
+++ b/main/mods/create-garnished.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Garnished"
-filename = "garnished-1.8+1.20.1-fabric.jar"
+filename = "garnished-1.8.3+1.20.1-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6e2SlzR4/versions/RoxzEBjm/garnished-1.8%2B1.20.1-fabric.jar"
+url = "https://cdn.modrinth.com/data/6e2SlzR4/versions/xM9frhZm/garnished-1.8.3%2B1.20.1-fabric.jar"
 hash-format = "sha1"
-hash = "4cddecd4481f3e1e6cef1090266834cc923b5eae"
+hash = "9364719c31722febbcfad4693efc5838c30f93a4"
 
 [update]
 [update.modrinth]
 mod-id = "6e2SlzR4"
-version = "RoxzEBjm"
+version = "xM9frhZm"
