--- a/main/mods/geode-plus.pw.toml
+++ b/main/mods/geode-plus.pw.toml
@@ -1,13 +1,13 @@
 name = "Geode+"
-filename = "geodeplus-fabric-1.2.4-1.20.1.jar"
+filename = "geode_plus-fabric-1.2.5-1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/3LAzTsNC/versions/ZJB4iPDm/geodeplus-fabric-1.2.4-1.20.1.jar"
+url = "https://cdn.modrinth.com/data/3LAzTsNC/versions/LJFj9bOT/geode_plus-fabric-1.2.5-1.20.1.jar"
 hash-format = "sha1"
-hash = "a7e48f52cd16ed35a3c2ecdeeb6f68ab5d7cdeb8"
+hash = "448cf528d4ffddd129d8899d57d5d75a87757c79"
 
 [update]
 [update.modrinth]
 mod-id = "3LAzTsNC"
-version = "ZJB4iPDm"
+version = "LJFj9bOT"
