--- a/main/mods/moonlight.pw.toml
+++ b/main/mods/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.11.30-fabric.jar"
+filename = "moonlight-1.20-2.11.33-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/yqHXozvj/moonlight-1.20-2.11.30-fabric.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/jzdBancr/moonlight-1.20-2.11.33-fabric.jar"
 hash-format = "sha1"
-hash = "d6508ed07202e57753874bc5253e89de06975be4"
+hash = "7bf1487d2834339364b00762e89158f98c063b52"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "yqHXozvj"
+version = "jzdBancr"
