--- a/main/mods/wthit.pw.toml
+++ b/main/mods/wthit.pw.toml
@@ -1,13 +1,13 @@
 name = "WTHIT"
-filename = "wthit-quilt-8.11.0.jar"
+filename = "wthit-quilt-8.12.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/GmHEJD6D/wthit-quilt-8.11.0.jar"
+url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/i8Zf2Ziu/wthit-quilt-8.12.0.jar"
 hash-format = "sha1"
-hash = "0bcfa45fbbb998e15d5605a82c8567e57f234519"
+hash = "9334d6f8517560c3e84d8a6f6057512a462c94fe"
 
 [update]
 [update.modrinth]
 mod-id = "6AQIaxuO"
-version = "GmHEJD6D"
+version = "i8Zf2Ziu"
